--- a/MyProfile.html
+++ b/MyProfile.html
@@ -7,10 +7,15 @@
   <h1>My recruitment profile </h1>
 
   <h2>About me</h2>
+
+  <img src="./IMAGE_1_FILE_NAME">
   <p>A dedicated educator with a passion for innovation. Results driven and student-focused.
 Proven track record in academic management, research and recruitment. Interested in senior executive
 role at Pro-Vice Chancellor or above.</p>
 
+  <img src="./IMAGE_2_FILE_HERE">
+  <img src="./IMAGE_3_FILE_HERE">
+  
   <h2> Skills and experience </h2>
 
   <p>Over 15 years of experience in academic settings, including more than twelve
@@ -25,6 +30,7 @@ years experience in a managerial capacity. Excellent communication skills and at
     <li> 9 GCSEs including Mathematics, Science, German, History and Geography
   </ul>
 
+  
   <h2>Hobbies and interests</h2>
 
   <ul>
